8px gaps in responsive and some other minor issues fixed

--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -39,7 +39,7 @@ text-transform: capitalize;
   background-position: center;
   filter: blur(10px);
   width: 100%;
-  height: 156px;
+  height: 151px;
   object-fit:contain;
 }
 
